<resources>
    <string name="app_name">Speeer</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">First name</string>
    <string name="last_name">Last name</string>
    <string name="patronymic">Patronymic</string>
    <string name="change_url">Change url</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="server_url">Server URL</string>
    <string name="add">Add</string>
    <string name="orders">Orders</string>
    <string name="history">History</string>
    <string name="canceled">Canceled</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="success_update">Successfully update</string>
    <string name="title">TITLE</string>
    <string name="вуіскшзешщт">DESCRIPTION</string>
    <string name="price">PRICE</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="buy">BUY</string>
    <string name="no_active_proposals">No active proposals</string>
    <string name="success_adding_order">Succes. Check it in your order list</string>
    <string name="erroe_adding_order">Error while adding order</string>
    <string name="show_report">Show report</string>
    <string name="no_active_order_or_upload">No active orders or upload please</string>
    <string name="not_allowed_yet">Not allowed yet</string>
    <string name="humidity">"HUMIDITY, %: "</string>
    <string name="rediation">"RADIATION, Sv: "</string>
    <string name="pressure">"PRESSURE, Pa: "</string>
    <string name="air_pollution">"AIR POLLUTION, %: "</string>
    <string name="temperature">"TEMPERATURE, ℃: "</string>
    <string name="no_canceled_orders">No canceled orders</string>
    <string name="no_finalized_orders">No finalized orders</string>
    <string name="error_update_user">Error while update user</string>
    <string name="error_while_get_user">Error while get user</string>
    <string name="error_while_get_fLocation">Error while get location</string>
    <string name="error_while_get_c_status">Error while get current status</string>
    <string name="error_while_get_c_s_list">Error while get current status list</string>
    <string name="active_orders">Active orders</string>
    <string name="add_orders">Add orders</string>
    <string name="canceled_orders">Canceled orders</string>
    <string name="loading">Loading...</string>
    <string name="status_changed">Status changed</string>
    <string name="n_orders_changed_status">(%d) order(s) changed status.</string>
    <string name="location">Location:</string>
    <string name="status">Status:</string>
    <string name="title_card">Title:</string>
    <string name="price_card">Price:</string>
    <string name="set_latitude">Set latitude here!</string>
    <string name="set_longitude">Set longitude here!</string>
    <string name="localization">Localization</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="pop_point">Populated point</string>
    <string name="incorrect_input">Incorrect input</string>
</resources>
